--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,23 +21,23 @@
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="56dp"
             android:layout_marginTop="?android:actionBarSize"
-            android:text="title_home"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
+            android:layout_height="60dp"
             android:layout_marginStart="0dp"
-            android:background="?android:attr/windowBackground"
+            android:layout_marginEnd="0dp"
+            android:background="@drawable/bg_half_rounded"
+            android:paddingTop="15dp"
+            app:elevation="50dp"
+            app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:labelVisibilityMode="labeled"
             app:menu="@menu/navigation" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -46,28 +46,29 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:itemTextColor="@color/white"
-        app:itemIconTint="@color/teal"
         android:background="@color/teal"
-        app:itemBackground="@drawable/drawer_selected_item"
+        android:fitsSystemWindows="true"
+        android:paddingEnd="15dp"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/menu_navigation_drawer">
+        app:itemBackground="@drawable/drawer_selected_item"
+        app:itemIconTint="@color/teal"
+        app:itemTextColor="@color/white"
+        app:menu="@menu/menu_navigation_drawer"
+        tools:ignore="RtlSymmetry">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:text="version 1.1"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:gravity="center_horizontal"
+                android:text="@string/version_app"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
         </RelativeLayout>
     </com.google.android.material.navigation.NavigationView>
-
 </androidx.drawerlayout.widget.DrawerLayout>
