--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,6 +8,7 @@
     tools:context=".menu.profile.ProfileFragment">
 
     <androidx.core.widget.NestedScrollView
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -178,7 +179,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="90dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 android:background="@drawable/bg_search"
                 android:elevation="50dp">
 
