--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,20 +25,43 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
+        <nl.joery.animatedbottombar.AnimatedBottomBar
             android:id="@+id/navigation"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/bg_half_rounded"
-            android:paddingTop="15dp"
-            app:elevation="50dp"
-            app:labelVisibilityMode="labeled"
+            android:elevation="5dp"
+            app:abb_animationDuration="500"
+            app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
+            app:abb_indicatorAppearance="round"
+            app:abb_indicatorColor="@color/white"
+            app:abb_indicatorHeight="5dp"
+            app:abb_indicatorMargin="30dp"
+            app:abb_selectedIndex="1"
+            app:abb_selectedTabType="text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/navigation" />
+            app:abb_tabAnimation="slide"
+            app:abb_tabColor="@color/white"
+            app:abb_tabColorSelected="@color/white"
+            app:abb_tabs="@menu/navigation"
+            tools:ignore="MissingConstraints" />
+
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:id="@+id/navigation"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_marginStart="0dp"-->
+<!--            android:layout_marginEnd="0dp"-->
+<!--            android:background="@drawable/bg_half_rounded"-->
+<!--            android:paddingTop="15dp"-->
+<!--            app:elevation="50dp"-->
+<!--            app:labelVisibilityMode="labeled"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:menu="@menu/navigation" />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
