--- a/app/src/main/res/drawable/item_half_rounded.xml
+++ b/app/src/main/res/drawable/item_half_rounded.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/dark_late_gray2" />
+    <solid android:color="@color/nav_color" />
 
     <corners
         android:bottomRightRadius="15dp"
