--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,29 +39,15 @@
             app:abb_indicatorMargin="30dp"
             app:abb_selectedIndex="1"
             app:abb_selectedTabType="text"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:abb_tabAnimation="slide"
             app:abb_tabColor="@color/white"
             app:abb_tabColorSelected="@color/white"
             app:abb_tabs="@menu/navigation"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             tools:ignore="MissingConstraints" />
 
-<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--            android:id="@+id/navigation"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginStart="0dp"-->
-<!--            android:layout_marginEnd="0dp"-->
-<!--            android:background="@drawable/bg_half_rounded"-->
-<!--            android:paddingTop="15dp"-->
-<!--            app:elevation="50dp"-->
-<!--            app:labelVisibilityMode="labeled"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            app:menu="@menu/navigation" />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -74,8 +60,9 @@
         android:paddingEnd="15dp"
         app:headerLayout="@layout/nav_header_main"
         app:itemBackground="@drawable/drawer_selected_item"
-        app:itemIconTint="@color/teal"
-        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/drawer_item_color"
+        app:itemTextColor="@color/drawer_item_color"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation_drawer"
         tools:ignore="RtlSymmetry">
 
